--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://avatars0.githubusercontent.com/u/22749961?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: katzmannk16@gmail.com
   facebook:
   flickr:
   github: kekatzmann
   instagram:
-  linkedin:
+  linkedin: kekatzmann
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: katzmannk16
